Added IAIDDT workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -102,7 +102,7 @@ title: Workshops
   <hr />
 </section>
 
-<section class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2">
+<section class="page-section container-fluid px-5 d-flex flex-column gap-2">
   <div class="row pt-4">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-2">
@@ -131,6 +131,40 @@ title: Workshops
   </div>
   <div class="flex flex-row justify-content-start pb-3">
     <a href="/workshops/fusion/" class="btn btn-primary">View Workshop</a>
+  </div>
+  <hr />
+</section>
+
+<section
+  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
+>
+  <div class="row pt-4">
+    <div class="col-sm-12 d-flex flex-column gap-4">
+      <h2 class="fs-2">
+        Innovate: AI, Data & Digital Transformation for a Smarter Future (IAIDDT
+        2025)
+      </h2>
+      <p class="fs-5">
+        The rapid evolution of Artificial Intelligence (AI), data analytics, and
+        digital technologies is transforming how organizations operate, learn,
+        and interact. This workshop, "Innovate: AI, Data & Digital
+        Transformation," brings together researchers, educators, and industry
+        practitioners to explore cutting-edge advancements and applications
+        across sectors including education, management, finance, and healthcare.
+        Topics will include AI-driven decision-making, generative AI for
+        sustainable practices, digital human resource management, secure
+        information systems, and the integration of metaverse and cognitive
+        modeling in learning environments. By highlighting real-world
+        implementations and data-driven strategies, the workshop aims to foster
+        collaborative innovation and provide a platform for interdisciplinary
+        dialogue on building smarter, more adaptive digital ecosystems.
+        Participants will gain insights into the transformative potential of AI
+        and data, and their role in shaping the future of digital society.
+      </p>
+    </div>
+  </div>
+  <div class="flex flex-row justify-content-start pb-3">
+    <a href="/workshops/iaiddt/" class="btn btn-primary">View Workshop</a>
   </div>
 </section>
 
