Fixes to IAIDDT workshop

--- a/workshops/iaiddt/index.html
+++ b/workshops/iaiddt/index.html
@@ -65,7 +65,9 @@ title: IAIDDT Workshop 2025
               <h5 class="fs-6">
                 Dr. Azza Basiouni <br />
                 Liwa College Abu Dhabi UAE <br />
-                <a href="azza.basiouni@lc.ac.ae">azza.basiouni@lc.ac.ae</a>
+                <a href="mailto:azza.basiouni@lc.ac.ae"
+                  >azza.basiouni@lc.ac.ae</a
+                >
               </h5>
               <p>
                 <b>Bio: </b>Dr. Azza Basiouni holds a BSc degree in Electrical
@@ -86,9 +88,10 @@ title: IAIDDT Workshop 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6 fw-bold">Workshop Chair</h5>
               <h5 class="fs-6">
-                Dr. Azza Basiouni <br />
-                Liwa College Abu Dhabi UAE <br />
-                <a href="azza.basiouni@lc.ac.ae">azza.basiouni@lc.ac.ae</a>
+                Mohammed Ghazal <br />Abu Dhabi University, UAE <br />
+                <a href="mailto:mohammed.ghazal@adu.ac.ae"
+                  >mohammed.ghazal@adu.ac.ae</a
+                >
               </h5>
             </div>
             <hr class="w-100" />
