--- a/index.html
+++ b/index.html
@@ -286,19 +286,10 @@ title: Home
       />
       <h5>Dr. C. Ashiq Rahman</h5>
       <h6><i>City of Calgary, Canada</i></h6>
-      <p>Industry Liaison Co-Chair</p>
+      <p>Industry Liaison Chair</p>
     </div>
 
-    <div class="col-md-4">
-      <img
-        src="/assets/images/ali.jpg"
-        alt="DR Dewan"
-        class="circle-img mb-3"
-      />
-      <h5>Dr Ali Dewan</h5>
-      <h6><i>Athabasca University, Canada</i></h6>
-      <p>Industry Liaison Co-Chair</p>
-    </div>
+   
 
     <div class="col-md-4">
       <img
