Separated program and keynotes pages

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -7,9 +7,9 @@ title: Women in the Smart World Forum 2025
 <section
   class="jumbotron text-center"
   style="
-    background-image: url('/assets/images/Digital_Twin_Calgary.jpg');
+    background-image: url('/assets/images/kyler-nixon-_ZBekGTBh-c-unsplash.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: 50% 60%;
     height: 60vh;
     position: relative;
     color: white;
