Clean up styles

--- a/atc/index.html
+++ b/atc/index.html
@@ -70,69 +70,90 @@ title: IEEE UIC 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Honorary Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Xinbo Gao, Chongqing University of Posts and Telecommunication,
-                China
+                Xinbo Gao <br />
+                Chongqing University of Posts and Telecommunication, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Lyudmila S Mihaylova, University of Sheffield, UK
+                Lyudmila S Mihaylova <br />
+                University of Sheffield, UK
               </h5>
               <h5 class="fs-6">
-                Zhunga Liu, Northwestern Polytechnical University, China
+                Zhunga Liu <br />
+                Northwestern Polytechnical University, China
               </h5>
               <h5 class="fs-6">
-                Hao Zhu, Chongqing University of Posts and Telecommunication,
-                China
+                Hao Zhu <br />
+                Chongqing University of Posts and Telecommunication, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Tarik Taleb, Ruhr University Bochum, Germany</h5>
               <h5 class="fs-6">
-                Zuowei Zhang, Northwestern Polytechnical University, China,
-                email: zhuhao@cqupt.edu.cn
+                Tarik Taleb <br />
+                Ruhr University Bochum, Germany
+              </h5>
+              <h5 class="fs-6">
+                Zuowei Zhang <br />
+                Northwestern Polytechnical University, China <br />
+                <a href="mailto:zhuhao@cqupt.edu.cn">zhuhao@cqupt.edu.cn</a>
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Vice Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Yulong Huang, Harbin Engineering University, China
+                Yulong Huang <br />
+                Harbin Engineering University, China
               </h5>
-              <h5 class="fs-6">Hongzhou Yang, University of Calgary, Canada</h5>
-              <h5 class="fs-6">Huaqing Li, Southwest University, China</h5>
-              <h5 class="fs-6">Jiawei Chen, Chongqing University, China</h5>
+              <h5 class="fs-6">
+                Hongzhou Yang <br />
+                University of Calgary, Canada
+              </h5>
+              <h5 class="fs-6">
+                Huaqing Li <br />
+                Southwest University, China
+              </h5>
+              <h5 class="fs-6">
+                Jiawei Chen <br />
+                Chongqing University, China
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Publicity Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Zhiqin Zhu, Chongqing University of Posts and Telecommunication,
-                China
-              </h5>
-              <h5 class="fs-6">Guanqiu Qi, Buffalo State University, USA</h5>
-              <h5 class="fs-6">
-                Dan Song, National University of Defense Technology, China
+                Zhiqin Zh <br />Chongqing University of Posts and
+                Telecommunication, China
               </h5>
               <h5 class="fs-6">
-                Zhen Tian, Guangdong Laboratory of Artificial Intelligence and
-                Digital Economy, China
+                Guanqiu Qi <br />
+                Buffalo State University, USA
+              </h5>
+              <h5 class="fs-6">
+                Dan Song <br />
+                National University of Defense Technology, China
+              </h5>
+              <h5 class="fs-6">
+                Zhen Tian <br />
+                Guangdong Laboratory of Artificial Intelligence and Digital
+                Economy, China
               </h5>
             </div>
           </div>
@@ -140,9 +161,13 @@ title: IEEE UIC 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Workshop Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Lipeng Pan, Northwest A&F University, China</h5>
               <h5 class="fs-6">
-                Tianyu Wang, Dalian University of Technology, China
+                Lipeng Pan <br />
+                Northwest A&F University, China
+              </h5>
+              <h5 class="fs-6">
+                Tianyu Wang <br />
+                Dalian University of Technology, China
               </h5>
             </div>
           </div>
@@ -151,7 +176,8 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Web Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Ke Zou, National University of Singapore, Singapore
+                Ke Zou <br />
+                National University of Singapore, Singapore
               </h5>
             </div>
           </div>
@@ -160,14 +186,16 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Victor C. M. Leung, University of British Columbia, Canada
+                Victor C. M. Leung <br />
+                University of British Columbia, Canada
               </h5>
               <h5 class="fs-6">
-                Sonia Heemstra de Groot, Eindhoven University of Technology,
-                Netherlands
+                Sonia Heemstra de Groot <br />
+                Eindhoven University of Technology, Netherlands
               </h5>
               <h5 class="fs-6">
-                Jun Zhao, Dalian University of Technology, China
+                Jun Zhao <br />
+                Dalian University of Technology, China
               </h5>
             </div>
           </div>
@@ -203,7 +231,7 @@ title: IEEE UIC 2025
           <h2 class="fs-2">IEEE ATC 2025 Tracks and Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 1: Intelligent and connected vehicles
@@ -222,7 +250,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 2: Artificial intelligence and LLM</h5>
                   <ul>
@@ -241,7 +269,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 3: Smart data fusion and target tracking
@@ -262,7 +290,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 4: Intelligent control and system</h5>
                   <ul>
@@ -319,8 +347,7 @@ title: IEEE UIC 2025
             >
             <p class="fs-6">
               Submission Link:
-              <a href="https://edas.info/index.php?c=33649"
-              target="_blank"
+              <a href="https://edas.info/index.php?c=33649" target="_blank"
                 >https://edas.info/index.php?c=33649</a
               >
             </p>
