--- a/cfp/index.html
+++ b/cfp/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IEEE SWC 2025 CFP
+title: IEEE SWC 2025 Call for Papers
 ---
 
 <!-- Hero Section -->
@@ -90,18 +90,27 @@ title: IEEE SWC 2025 CFP
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
-            <div class="d-flex flex-column">
-              <h5 class="fs-6">Henry Leung, University of Calgary, Canada</h5>
-              <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
+            <div class="d-flex flex-column w-100">
+              <h5 class="fs-6">
+                Henry Leung <br />
+                University of Calgary, Canada
+              </h5>
+              <h5 class="fs-6">
+                Oscar Lin <br />
+                Athabasca University, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Reza Malekian, Malmö University, Sweden</h5>
+              <h5 class="fs-6">
+                Reza Malekian <br />
+                Malmö University, Sweden
+              </h5>
             </div>
           </div>
         </div>
