--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -82,50 +82,71 @@ title: Women in the Smart World Forum 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Ying Zhang, Northwestern Polytechnical University, China
+                Ying Zhang <br />
+                Northwestern Polytechnical University, China
               </h5>
-              <h5 class="fs-6">Binbin Zhou, Hangzhou City University, China</h5>
-              <h5 class="fs-6">Sara Saeedi, University of Calgary, Canada</h5>
+              <h5 class="fs-6">
+                Binbin Zhou <br />
+                Hangzhou City University, China
+              </h5>
+              <h5 class="fs-6">
+                Sara Saeedi <br />
+                University of Calgary, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Executive Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Khawla Alhasan, Open Arab University, Kuwait</h5>
               <h5 class="fs-6">
-                Rosy Xi Luo, Beijing Raygen Innovation Technology Co., Ltd,
-                China
+                Khawla Alhasan <br />
+                Open Arab University, Kuwait
               </h5>
               <h5 class="fs-6">
-                Joanna Siebert, Harbin Institute of Technology, Shenzhen, China
+                Rosy Xi Luo <br />
+                Beijing Raygen Innovation Technology Co., Ltd, China
+              </h5>
+              <h5 class="fs-6">
+                Joanna Siebert <br />
+                Harbin Institute of Technology, Shenzhen, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Executive Co-Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Saher Javaid, Japan Advanced Institute of Science and
-                Technology, Japan
+                Saher Javaid <br />
+                Japan Advanced Institute of Science and Technology, Japan
               </h5>
-              <h5 class="fs-6">Tatiana Cardon, Saint Louis University, USA</h5>
               <h5 class="fs-6">
-                Ismini Psychoula, University College London, United Kingdom
+                Tatiana Cardon <br />
+                Saint Louis University, USA
+              </h5>
+              <h5 class="fs-6">
+                Ismini Psychoula <br />
+                University College London, United Kingdom
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Runhe Huang (Chair), Hosei University, Japan</h5>
-              <h5 class="fs-6">Zhi Jin, Peking University, China</h5>
+              <h5 class="fs-6">
+                Runhe Huang (Chair) <br />
+                Hosei University, Japan
+              </h5>
+              <h5 class="fs-6">
+                Zhi Jin <br />
+                Peking University, China
+              </h5>
             </div>
           </div>
         </div>
