--- a/uic/index.html
+++ b/uic/index.html
@@ -70,49 +70,64 @@ title: IEEE UIC 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Bin Hu, Beijing Institute of Technology, China
+                Bin Hu <br />
+                Beijing Institute of Technology, China
               </h5>
-              <h5 class="fs-6">H. Herbert Song, University of Maryland, USA</h5>
+              <h5 class="fs-6">
+                H. Herbert Song <br />
+                University of Maryland, USA
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Parimala Thulasiraman, University of Manitoba, Canada
+                Parimala Thulasiraman <br />
+                University of Manitoba, Canada
               </h5>
               <h5 class="fs-6">
-                Ying Zhang, Northwestern Polytechnical University, China
+                Ying Zhang <br />
+                Northwestern Polytechnical University, China
               </h5>
               <h5 class="fs-6">
-                Xiaokang Wang, Hainan University, China, email:
-                xkwang@hainanu.edu.cn
+                Xiaokang Wang <br />
+                Hainan University, China, <br />
+                <a href="xkwang@hainanu.edu.cn">xkwang@hainanu.edu.cn</a>
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Vice Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Jin Sun, Nanjing University of Science and Technology, China
+                Jin Sun <br />
+                Nanjing University of Science and Technology, China
               </h5>
               <h5 class="fs-6">
-                Xiaolong Xu, Nanjing University of Information Science, China
+                Xiaolong Xu <br />
+                Nanjing University of Information Science, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Publicity Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Ryan Gustafson, Athabasca University, Canada</h5>
-              <h5 class="fs-6">Yan Ding, Hunan University, China</h5>
+              <h5 class="fs-6">
+                Ryan Gustafson <br />
+                Athabasca University, Canada
+              </h5>
+              <h5 class="fs-6">
+                Yan Ding <br />
+                Hunan University, China
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -120,9 +135,12 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Web Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Raymond Morland, Athabasca University, Canada
+                Raymond Morland <br />Athabasca University, Canada
               </h5>
-              <h5 class="fs-6">Jiawei Wang, The University of Warwick, UK</h5>
+              <h5 class="fs-6">
+                Jiawei Wang <br />
+                The University of Warwick, UK
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -130,31 +148,48 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Jiannong Cao, The Hong Kong Polytechnic University, HK
+                Jiannong Cao <br />
+                The Hong Kong Polytechnic University, HK
               </h5>
               <h5 class="fs-6">
-                Liming Chen, Dalian University of Technology, UK
-              </h5>
-              <h5 class="fs-6">Sumi Helal, University of Florida, USA</h5>
-              <h5 class="fs-6">Runhe Huang, Hosei University, Japan</h5>
-              <h5 class="fs-6">
-                Jadwiga Indulska, University of Queensland, Australia
+                Liming Chen <br />
+                Dalian University of Technology, UK
               </h5>
               <h5 class="fs-6">
-                Hai Jin, Huazhong University of Science and Technology, China
+                Sumi Helal <br />
+                University of Florida, USA
               </h5>
               <h5 class="fs-6">
-                Stephen S. Yau, Arizona State University, USA
+                Runhe Huang <br />
+                Hosei University, Japan
               </h5>
               <h5 class="fs-6">
-                Zhiwen Yu, Harbin Engineering University, China
+                Jadwiga Indulska <br />
+                University of Queensland, Australia
               </h5>
               <h5 class="fs-6">
-                Daqing Zhang, Peking University, China/IP Paris, France
+                Hai Jin <br />
+                Huazhong University of Science and Technology, China
               </h5>
-              <h5 class="fs-6">Jianhua Ma (Chair), Hosei University, Japan</h5>
               <h5 class="fs-6">
-                Laurence T. Yang (Chair), St. Francis Xavier University, Canada
+                Stephen S. Yau <br />
+                Arizona State University, USA
+              </h5>
+              <h5 class="fs-6">
+                Zhiwen Yu <br />
+                Harbin Engineering University, China
+              </h5>
+              <h5 class="fs-6">
+                Daqing Zhang <br />
+                Peking University, China/IP Paris, France
+              </h5>
+              <h5 class="fs-6">
+                Jianhua Ma (Chair) <br />
+                Hosei University, Japan
+              </h5>
+              <h5 class="fs-6">
+                Laurence T. Yang (Chair) <br />
+                St. Francis Xavier University, Canada
               </h5>
             </div>
           </div>
@@ -191,7 +226,7 @@ title: IEEE UIC 2025
           <h2 class="fs-2">IEEE UIC 2025 Tracks and Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 1: Intelligent/Smart Object & Interaction
@@ -210,7 +245,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 2: Smart Environment Application</h5>
                   <ul>
@@ -227,7 +262,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 3: Intelligent/Smart Systems & Services
@@ -249,7 +284,7 @@ title: IEEE UIC 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 4: Personalization and Social Aspects
