--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -22,9 +22,6 @@ title: IEEE Digital Twin 2025
       <h1 class="display-5 fw-bolder mt-5">
         The 2025 IEEE International Conference on Digital Twin (Hybrid)
       </h1>
-      <!-- <h3 class="w-75 responsive-width fw-medium text-center">
-        Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
-      </h3> -->
       <div>
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">August 18 - 22, 2025</h3>
@@ -72,63 +69,87 @@ title: IEEE Digital Twin 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Honorary Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Vincenzo Piuri, University of Milan, Italy</h5>
               <h5 class="fs-6">
-                Diane J. Cook, Washington State University, USA
+                Vincenzo Piuri <br />University of Milan, Italy
+              </h5>
+              <h5 class="fs-6">
+                Diane J. Cook <br />Washington State University, USA
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Zumin Wang, Dalian University, China</h5>
               <h5 class="fs-6">
-                Ljiljana Trajkovic, Simon Fraser University, Canada
+                Zumin Wang <br />
+                Dalian University, China
               </h5>
               <h5 class="fs-6">
-                Tahar Kechadi, University College Dublin, Ireland
+                Ljiljana Trajkovic <br />
+                Simon Fraser University, Canada
               </h5>
-              <h5 class="fs-6">A. El Saddik, University of Ottawa, Canada</h5>
+              <h5 class="fs-6">
+                Tahar Kechadi <br />
+                University College Dublin, Ireland
+              </h5>
+              <h5 class="fs-6">
+                A. El Saddik <br />
+                University of Ottawa, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Tao Zhu, University of South China, China , email:
-                tzhu@usc.edu.cn
+                Tao Zhu <br />
+                University of South China, China <br />
+                <a href="mailto:tzhu@usc.edu.cn">tzhu@usc.edu.cn</a>
               </h5>
-              <h5 class="fs-6">Jing Qin, Dalian University, China</h5>
               <h5 class="fs-6">
-                Nyo Thiri Aung, University College Dublin, Ireland
+                Jing Qin <br />
+                Dalian University, China
               </h5>
-              <h5 class="fs-6">Pengfei Hu, Holisys Ltd. China</h5>
+              <h5 class="fs-6">
+                Nyo Thiri Aung <br />
+                University College Dublin, Ireland
+              </h5>
+              <h5 class="fs-6">
+                Pengfei Hu <br />
+                Holisys Ltd. China
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Panel Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Kefeng Li, Macao Polytechnic University, China
+                Kefeng Li <br />
+                Macao Polytechnic University, China
               </h5>
               <h5 class="fs-6">
-                Lingling Fang, Liaoning Normal University, China
+                Lingling Fang <br />
+                Liaoning Normal University, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Publicity Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Hui Fang, Loughborough University, UK</h5>
               <h5 class="fs-6">
-                Helin Gong, Shanghai Jiaotong University, China
+                Hui Fang <br />
+                Loughborough University, UK
+              </h5>
+              <h5 class="fs-6">
+                Helin Gong <br />
+                Shanghai Jiaotong University, China
               </h5>
             </div>
           </div>
@@ -136,50 +157,73 @@ title: IEEE Digital Twin 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Workshop Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Lu Liu, University of Exeter, UK</h5>
-              <h5 class="fs-6">Khawla Alhasan, Arab Open University, Kuwait</h5>
+              <h5 class="fs-6">
+                Lu Liu <br />
+                University of Exeter, UK
+              </h5>
+              <h5 class="fs-6">
+                Khawla Alhasan <br />
+                Arab Open University, Kuwait
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Special Issue Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Jascha Grübel, Wageningen Uni. & Res, Netherlands
+                Jascha Grübel <br />
+                Wageningen Uni. & Res, Netherlands
               </h5>
               <h5 class="fs-6">
-                Pengcheng Zhao, University of South China, China
+                Pengcheng Zhao <br />
+                University of South China, China
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Web Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Raymond Morland, Athabasca University, Canada
+                Raymond Morland <br />
+                Athabasca University, Canada
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Advisory Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Lan Huang, Jilin University, China</h5>
-              <h5 class="fs-6">Oscar Lin，Athabasca University，Canada</h5>
-              <h5 class="fs-6">Andreas Holzinger, BOKU, Austria</h5>
+              <h5 class="fs-6">
+                Lan Huang <br />
+                Jilin University, China
+              </h5>
+              <h5 class="fs-6">
+                Oscar Lin <br />
+                Athabasca University, Canada
+              </h5>
+              <h5 class="fs-6">
+                Andreas Holzinger <br />
+                BOKU, Austria
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Steering Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Jianhua Ma, Hosei University, Japan</h5>
               <h5 class="fs-6">
-                Laurence T. Yang, St. Francis Xavier Uni., Canada
+                Jianhua Ma <br />
+                Hosei University, Japan
               </h5>
               <h5 class="fs-6">
-                Liming Chen, Dalian University of Technology, China
+                Laurence T. Yang <br />
+                St. Francis Xavier Uni., Canada
+              </h5>
+              <h5 class="fs-6">
+                Liming Chen <br />
+                Dalian University of Technology, China
               </h5>
             </div>
           </div>
@@ -217,7 +261,7 @@ title: IEEE Digital Twin 2025
           <h2 class="fs-2">IEEE Digital Twin 2025 Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 1: Digital Twin Fundamentals</h5>
                   <ul>
@@ -236,7 +280,7 @@ title: IEEE Digital Twin 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 2: Digital Twin Interaction</h5>
                   <ul>
@@ -255,7 +299,7 @@ title: IEEE Digital Twin 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 3: Digital Twin Security and Privacy
@@ -274,7 +318,7 @@ title: IEEE Digital Twin 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 4: Digital Twin Systems and Applications
@@ -321,7 +365,9 @@ title: IEEE Digital Twin 2025
             >
             <p class="fs-6">
               Submission Link:
-              <a href="https://edas.info/N33584" target="_blank">https://edas.info/N33584</a>
+              <a href="https://edas.info/N33584" target="_blank"
+                >https://edas.info/N33584</a
+              >
             </p>
           </div>
         </div>
