--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -22,9 +22,6 @@ title: IEEE MVS 2025
       <h1 class="display-5 fw-bolder mt-5">
         IEEE International Conference on Metaverse 2025 (Hybrid)
       </h1>
-      <!-- <h3 class="w-75 responsive-width fw-medium text-center">
-        Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
-      </h3> -->
       <div>
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">August 18 - 22, 2025</h3>
@@ -82,111 +79,170 @@ title: IEEE MVS 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Honorary Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Giancarlo Fortino, the University of Calabria, Italy
+                Giancarlo Fortino <br />
+                the University of Calabria, Italy
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Qing Li, Hong Kong Polytechnic University, Hongkong, China
+                Qing Li <br />
+                Hong Kong Polytechnic University, Hongkong, China
               </h5>
-              <h5 class="fs-6">Mohammed Ghazal, Abu Dhabi University, UAE</h5>
-              <h5 class="fs-6">Georg Borges, Saarland University, Germany</h5>
+              <h5 class="fs-6">
+                Mohammed Ghazal <br />Abu Dhabi University, UAE
+              </h5>
+              <h5 class="fs-6">
+                Georg Borges <br />
+                Saarland University, Germany
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Executive Chair</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
+              <h5 class="fs-6">
+                Oscar Lin <br />
+                Athabasca University, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Azza Basiouni, Liwa College, UAE, email: azza.basiouni@lc.ac.ae
+                Azza Basiouni <br />
+                Liwa College, UAE, email: azza.basiouni@lc.ac.ae
               </h5>
               <h5 class="fs-6">
-                Junhui Hou, City University of Hong Kong, Hong Kong, China,
-                email: jh.hou@cityu.edu.hk
+                Junhui Hou <br />
+                City University of Hong Kong, Hong Kong, China <br />
+                <a href="mailto:jh.hou@cityu.edu.hk">jh.hou@cityu.edu.hk</a>
               </h5>
               <h5 class="fs-6">
-                Francesco Pupo, The University of Calabria, Italy, email:
-                francesco.pupo@unical.it
+                Francesco Pupo <br />
+                The University of Calabria, Italy <br />
+                <a href="mailto:francesco.pupo@unical.it"
+                  >francesco.pupo@unical.it</a
+                >
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Publicity Chair</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Kangsoo Kim , University of Calgary, Canada</h5>
+              <h5 class="fs-6">
+                Kangsoo Kim <br />
+                University of Calgary, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Web Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Raymond Morland, Athabasca University, Canada
+                Raymond Morland <br />
+                Athabasca University, Canada
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">International Advisory Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Khaled Shaalan, The British University in Dubai, UAE
+                Khaled Shaalan <br />
+                The British University in Dubai, UAE
               </h5>
-              <h5 class="fs-6">Zhong Chen, Peking University, China</h5>
-              <h5 class="fs-6">Shengfeng Qin, Northumbria University, UK</h5>
+              <h5 class="fs-6">Zhong Chen <br />Peking University, China</h5>
+              <h5 class="fs-6">
+                Shengfeng Qin <br />Northumbria University, UK
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Technical Committee Members</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Georg Borges, Saarland University, Germany</h5>
-              <h5 class="fs-6">Ray Al-Barazie, Liwa College, Al Ain UAE</h5>
-              <h5 class="fs-6">Imen Zalila, Liwa College, Abu Dhabi UAE</h5>
               <h5 class="fs-6">
-                Said Salloum, Salford University, Manchester UK
-              </h5>
-              <h5 class="fs-6">Ashgan Ahmed, Liwa College, Al Ain UAE</h5>
-              <h5 class="fs-6">Xiaohua Feng, University of Bedfordshire, UK</h5>
-              <h5 class="fs-6">Scott Adams, Deakin University, Australia</h5>
-              <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
-              <h5 class="fs-6">Hui Yu, University of Glasgow, UK</h5>
-              <h5 class="fs-6">
-                Jesus Matinez del Rincon, Queen’s Univ. Belfast, UK
+                Georg Borges <br />
+                Saarland University, Germany
               </h5>
               <h5 class="fs-6">
-                Doowon Jeong, Sung Kyun Kwan University, Korea
+                Ray Al-Barazie <br />
+                Liwa College, Al Ain UAE
               </h5>
               <h5 class="fs-6">
-                Jiawen Kang, Guangdong Univ. of Technology, China
+                Imen Zalila <br />
+                Liwa College, Abu Dhabi UAE
               </h5>
               <h5 class="fs-6">
-                Junhui Hou, City University of Hong Kong, China
+                Said Salloum <br />
+                Salford University, Manchester UK
               </h5>
               <h5 class="fs-6">
-                Francesco Pupo, The University of Calabria, Italy
+                Ashgan Ahmed <br />
+                Liwa College, Al Ain UAE
               </h5>
-              <h5 class="fs-6">Mohammed Ghazal, Abu Dhabi University, UAE</h5>
+              <h5 class="fs-6">
+                Xiaohua Feng <br />
+                University of Bedfordshire, UK
+              </h5>
+              <h5 class="fs-6">
+                Scott Adams <br />
+                Deakin University, Australia
+              </h5>
+              <h5 class="fs-6">
+                Oscar Lin <br />
+                Athabasca University, Canada
+              </h5>
+              <h5 class="fs-6">
+                Hui Yu <br />
+                University of Glasgow, UK
+              </h5>
+              <h5 class="fs-6">
+                Jesus Matinez del Rincon <br />
+                Queen’s Univ. Belfast, UK
+              </h5>
+              <h5 class="fs-6">
+                Doowon Jeong <br />
+                Sung Kyun Kwan University, Korea
+              </h5>
+              <h5 class="fs-6">
+                Jiawen Kang <br />
+                Guangdong Univ. of Technology, China
+              </h5>
+              <h5 class="fs-6">
+                Junhui Hou <br />
+                City University of Hong Kong, China
+              </h5>
+              <h5 class="fs-6">
+                Francesco Pupo <br />
+                The University of Calabria, Italy
+              </h5>
+              <h5 class="fs-6">
+                Mohammed Ghazal <br />
+                Abu Dhabi University, UAE
+              </h5>
 
-              <h5 class="fs-6">Dr. Walaa Saber Ismail, Liwa College, UAE</h5>
               <h5 class="fs-6">
-                Dr. Suha Khalil Assayed, British University in Dubai, UAE
+                Dr. Walaa Saber Ismail <br />
+                Liwa College, UAE
+              </h5>
+              <h5 class="fs-6">
+                Dr. Suha Khalil Assayed <br />
+                British University in Dubai, UAE
               </h5>
             </div>
           </div>
@@ -194,12 +250,22 @@ title: IEEE MVS 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Jianhua Ma (Chair), Hosei University, Japan</h5>
               <h5 class="fs-6">
-                Laurence Yang (Chair), St. Francis Xavier Univ., Canada
+                Jianhua Ma (Chair) <br />
+                Hosei University, Japan
               </h5>
-              <h5 class="fs-6">Hui Yu, University of Glasgow, UK</h5>
-              <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
+              <h5 class="fs-6">
+                Laurence Yang (Chair) <br />
+                St. Francis Xavier Univ., Canada
+              </h5>
+              <h5 class="fs-6">
+                Hui Yu <br />
+                University of Glasgow, UK
+              </h5>
+              <h5 class="fs-6">
+                Oscar Lin <br />
+                Athabasca University, Canada
+              </h5>
             </div>
           </div>
         </div>
@@ -244,7 +310,7 @@ title: IEEE MVS 2025
           <h2 class="fs-2">IEEE Metaverse 2025 Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 1: Metaverse Computing and Communications
@@ -261,7 +327,7 @@ title: IEEE MVS 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 2: Metaverse Interaction</h5>
                   <ul>
@@ -278,7 +344,7 @@ title: IEEE MVS 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 3: Metaverse Security</h5>
                   <ul>
@@ -292,7 +358,7 @@ title: IEEE MVS 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 4: Applications and Emerging Techniques
@@ -309,7 +375,7 @@ title: IEEE MVS 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 5: Law and Ethics in Metaverse</h5>
                   <ul>
@@ -378,7 +444,7 @@ title: IEEE MVS 2025
           <p class="fs-5">
             All types of papers, including regular, workshop, special session,
             WiP and Late Breaking Innovation (LBI) papers should be submitted
-            via the conferences’ EDAS system. Authors should register with the
+            via the conferences' EDAS system. Authors should register with the
             EDAS system first, and then make the submission via the conference
             link below. Make sure you select the right conference, track,
             workshop or forums for your paper.
