--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -23,9 +23,6 @@ title: IEEE ScalCom 2025
         The 25th IEEE International Conference on Scalable Computing and
         Communications (Hybrid)
       </h1>
-      <!-- <h3 class="w-75 responsive-width fw-medium text-center">
-              Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
-            </h3> -->
       <div>
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">August 18 - 22, 2025</h3>
@@ -73,52 +70,63 @@ title: IEEE ScalCom 2025
         >
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Liang Chen, University of Northern BC, Canada
+                Liang Chen <br />
+                University of Northern BC, Canada
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Cen Chen, South China University of Technology, China, email:
-                chencen@scut.edu.cn
+                Cen Chen <br />
+                South China University of Technology, China <br />
+                <a href="chencen@scut.edu.cn">chencen@scut.edu.cn</a>
               </h5>
               <h5 class="fs-6">
-                Fan Jiang, University of Northern BC, Canada, email:
-                Fan.Jiang@unbc.ca
+                Fan Jiang <br />
+                University of Northern BC, Canada, <br />
+                <a href="Fan.Jiang@unbc.ca">Fan.Jiang@unbc.ca</a>
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Panel Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Man Lin, St. Francis Xavier University, Canada
+                Man Lin <br />
+                St. Francis Xavier University, Canada
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Local Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Rossitza Marinova, Concordia University of Edmonton, Canada
+                Rossitza Marinova <br />
+                Concordia University of Edmonton, Canada
               </h5>
-              <h5 class="fs-6">Anthony Azimi, SAIT, Canada</h5>
+              <h5 class="fs-6">
+                Anthony Azimi <br />
+                SAIT, Canada
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Tutorial Chair</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Hong Lin, University of Houston-Downtown, US</h5>
+              <h5 class="fs-6">
+                Hong Lin <br />
+                University of Houston-Downtown, US
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -126,7 +134,8 @@ title: IEEE ScalCom 2025
             <h5 class="fs-6 fw-bold">Publication Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Carson K. Leung, University of Manitoba, Canada
+                Carson K. Leung <br />
+                University of Manitoba, Canada
               </h5>
             </div>
           </div>
@@ -135,7 +144,8 @@ title: IEEE ScalCom 2025
             <h5 class="fs-6 fw-bold">Web Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Raymond Morland, Athabasca University, Canada
+                Raymond Morland <br />
+                Athabasca University, Canada
               </h5>
             </div>
           </div>
@@ -143,12 +153,17 @@ title: IEEE ScalCom 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Steering Committee Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">Jianhua Ma, Hosei University, Japan</h5>
               <h5 class="fs-6">
-                Laurence T. Yang, St. Francis Xavier Uni., Canada
+                Jianhua Ma <br />
+                Hosei University, Japan
               </h5>
               <h5 class="fs-6">
-                Liming Chen, Dalian University of Technology, China
+                Laurence T. Yang <br />
+                St. Francis Xavier Uni., Canada
+              </h5>
+              <h5 class="fs-6">
+                Liming Chen <br />
+                Dalian University of Technology, China
               </h5>
             </div>
           </div>
@@ -191,7 +206,7 @@ title: IEEE ScalCom 2025
           <h2 class="fs-2">IEEE ScalCom 2025 Tracks and Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 1: Tools & Platforms for Supporting Scalability
@@ -212,7 +227,7 @@ title: IEEE ScalCom 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">
                     Track 2: Scalable Communication & Networks
@@ -241,7 +256,7 @@ title: IEEE ScalCom 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 3: Scalable Algorithms & Models</h5>
                   <ul>
@@ -266,7 +281,7 @@ title: IEEE ScalCom 2025
               </div>
             </div>
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card bg-light-subtle">
+              <div class="card bg-light-subtle h-100">
                 <div class="card-body">
                   <h5 class="fs-5">Track 4: Scalability in Large-scale AI</h5>
                   <ul>
@@ -325,7 +340,9 @@ title: IEEE ScalCom 2025
             </a>
             <p class="fs-6">
               Submission Link:
-              <a href="https://edas.info/N33585" target="_blank">https://edas.info/N33585</a>
+              <a href="https://edas.info/N33585" target="_blank"
+                >https://edas.info/N33585</a
+              >
             </p>
           </div>
         </div>
