Work on 404 page

--- a/404.html
+++ b/404.html
@@ -17,9 +17,11 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div
+  class="container d-flex flex-column justify-content-center align-items-center"
+  style="height: 80vh"
+>
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <a href="/" class="btn btn-primary">Go Home</a>
 </div>
