SEGA added et al description and annonymous details.

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -350,7 +350,8 @@ title: SEGA Workshop 2025
           </p>
           <ul>
             <li>No appendix is allowed</li>
-            <li>Each reference must specify all authors (no et al.)</li>
+            <li>Each reference must specify all authors up to including 6, then use et al. beyond 6.</li>
+            <li>Remove identifying author and project information for double anonymized review</li>
             <li>Paper size: US Letter 8.5in x 11in</li>
             <li>Ensure that the figures and tables are legible</li>
           </ul>
