SEGA submission instructions updated.

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -351,7 +351,7 @@ title: SEGA Workshop 2025
           <ul>
             <li>No appendix is allowed</li>
             <li>Each reference must specify all authors up to including 6, then use et al. beyond 6.</li>
-            <li>Remove identifying author and project information for double anonymized review</li>
+            <li>Submissions should include the title, author(s), affiliation(s), e-mail address(es), and institution information in the first page</li>
             <li>Paper size: US Letter 8.5in x 11in</li>
             <li>Ensure that the figures and tables are legible</li>
           </ul>
