SEGA deadline extended to May 25, 2025

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -42,7 +42,7 @@ title: SEGA Workshop 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Submission Deadline</h5>
-          <h6 class="">May 10, 2025</h6>
+          <h6 class=""><s>May 10, 2025</s><span style="color:red;"> May 25, 2025</span></h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Acceptance Notification</h5>
           <h6 class="">June 15, 2025</h6>
