--- a/uic/index.html
+++ b/uic/index.html
@@ -128,6 +128,11 @@ title: IEEE UIC 2025
                 Yan Ding <br />
                 Hunan University, China
               </h5>
+
+              <h5 class="fs-6">
+                Chen Yang <br />
+                Institute of Software, Chinese Academy of Sciences, China 
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
