--- a/program/index.html
+++ b/program/index.html
@@ -119,7 +119,9 @@ title: Program
               <div class="card-body">
                 <h5>Day 6</h5>
                 <h3>Group Trip to Banff</h3>
-                <p class="fs-5">Information Coming Soon</p>
+                <a href="/travel/banff-group-trip" class="btn btn-primary mt-2"
+                  >Learn More</a
+                >
               </div>
             </div>
           </div>
