--- a/venue/calgary/index.html
+++ b/venue/calgary/index.html
@@ -7,7 +7,7 @@ title: Venue - Calgary
 <section
   class="jumbotron text-center"
   style="
-    background-image: url('/assets/images/sri-gowda-pdIe9hAcaP4-unsplash.jpg');
+    background-image: url('/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg');
     background-size: cover;
     background-position: center;
     height: 60vh;
@@ -165,6 +165,9 @@ title: Venue - Calgary
     </div>
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
+        <a href="/travel/banff-group-trip/" class="btn btn-primary w-auto"
+          >Join the Group Trip to Banff</a
+        >
         <a
           href="https://www.banfflakelouise.com/"
           target="_blank"
@@ -178,6 +181,36 @@ title: Venue - Calgary
           >Learn more Jasper</a
         >
       </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
+
+<section
+  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
+>
+  <h2 class="fs-2 text-center">Sponsors</h2>
+  <div class="row justify-content-around gap-3 pb-5">
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
+    </div>
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/cis-logo.png" class="mh-100" />
+    </div>
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
     </div>
   </div>
 </section>
