--- a/venue/telus-convention-center/index.html
+++ b/venue/telus-convention-center/index.html
@@ -49,10 +49,43 @@ title: Venue - Telus Convention Center
     </div>
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-4">
-        <a href="https://calgary-convention.com/" target="_blank" class="btn btn-primary w-auto"
+        <a
+          href="https://calgary-convention.com/"
+          target="_blank"
+          class="btn btn-primary w-auto"
           >Learn More</a
         >
       </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  {% include colocated-conferences.html %}
+</section>
+
+<section
+  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
+>
+  <h2 class="fs-2 text-center">Sponsors</h2>
+  <div class="row justify-content-around gap-3 pb-5">
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/ieee mb black png.png" class="mh-100" />
+    </div>
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/cis-logo.png" class="mh-100" />
+    </div>
+    <div
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
     </div>
   </div>
 </section>
