Moved keynotes to individual pages

--- a/program/index.html
+++ b/program/index.html
@@ -119,6 +119,11 @@ title: Program
               <div class="card-body">
                 <h5>Day 6</h5>
                 <h3>Group Trip to Banff</h3>
+                <p>
+                  Join us and escape the hustle of the city with an optional day
+                  trip to Banff National Park and experience the stunning
+                  natural beauty of one of Canada's most iconic national parks.
+                </p>
                 <a href="/travel/banff-group-trip" class="btn btn-primary mt-2"
                   >Learn More</a
                 >
