--- a/keynotes/giancarlo-fortino/index.html
+++ b/keynotes/giancarlo-fortino/index.html
@@ -7,9 +7,9 @@ title: Keynotes
 <section
   class="jumbotron text-center"
   style="
-    background-image: url('/assets/images/keynote.jpg');
+    background-image: url('/assets/images/fortino_keynote_digital_twins_gen_ai.png');
     background-size: cover;
-    background-position: center;
+    background-position: 50% 0%;
     height: 60vh;
     position: relative;
     color: white;
@@ -19,7 +19,11 @@ title: Keynotes
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">Keynote Presentations</h1>
+      <h1 class="display-5 fw-bolder mt-5">
+        From Digital Twins to Generative Digital Twins: Towards a Novel Approach
+        in the IoT Edge-Cloud Continuum
+      </h1>
+      <h3>Presented by: Dr. Giancarlo Fortino</h3>
     </div>
   </div>
 </section>
@@ -30,11 +34,10 @@ title: Keynotes
   <div class="d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-        <h3 class="mb-2">
-          From Digital Twins to Generative Digital Twins: Towards a Novel
-          Approach in the IoT Edge-Cloud Continuum
-        </h3>
-        <h5>Presented by: Dr. Giancarlo Fortino</h5>
+        <h1>
+          Join us in exploring how generative AI is empowering the future of
+          digital twins
+        </h1>
         <p class="fs-5">
           Digital Twins (DTs) are software replicas that not only mirrors
           physical entities but can also proactively predict, control, optimize
@@ -42,7 +45,7 @@ title: Keynotes
           concept after an initial hype stayed untouched for decades. The rise
           of Internet of Things (IoT) and Artificial Intelligence (AI) enabled
           DT, respectively, to exchange real-world data and to fully exploit it
-          for fulfilling its own goals. Very recently, Gener-ative AI (Gen-AI)
+          for fulfilling its own goals. Very recently, Generative AI (Gen-AI)
           methods started being sporadically applied to DT in different contexts
           and with different targets. In this talk, starting from our
           experiences on design, implementation and evaluation of DTs and, more
@@ -65,6 +68,7 @@ title: Keynotes
         </p>
       </div>
     </div>
+    <hr />
     <div class="row">
       <div class="col-3 mb-3 mb-sm-0 d-flex flex-row gap-4">
         <div class="text-center">
@@ -78,7 +82,7 @@ title: Keynotes
         </div>
       </div>
       <div class="col-9">
-        <h4>Biography</h4>
+        <h3>Biography</h3>
         <p>
           Giancarlo Fortino (IEEE Fellow 2022) is Full Professor of Computer
           Engineering at the Dept of Informatics, Modeling, Electronics, and
@@ -121,68 +125,6 @@ title: Keynotes
           Associate VP of the Cybernetics area of the IEEE SMCS and former
           member of the IEEE SMCS BoG and former chair of the IEEE SMCS Italian
           Chapter.
-        </p>
-      </div>
-    </div>
-  </div>
-  <hr />
-  <div class="d-flex flex-column gap-4">
-    <div class="row">
-      <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-        <h3 class="mb-2">
-          Intelligent Edge Sensing and Distributed Cognition Are Transforming
-          the Future of Smart World
-        </h3>
-        <h5>Presented by: Dr. Runhe Huang</h5>
-        <p class="fs-5">
-          Intelligent edge sensing and distributed cognition are reshaping the
-          architecture of future smart worlds. By enabling real-time perception,
-          processing, and decision-making at the network edge, intelligent
-          sensing technologies reduce latency, enhance privacy, and support
-          context-aware adaptation. At the same time, distributed cognition,
-          defined as the integration of sensing, learning, memory, and reasoning
-          across decentralized systems, provides a powerful framework for
-          creating scalable and resilient intelligent environments. This talk
-          will explore key advances in edge sensing frameworks, lightweight AI
-          models, and associative memory mechanisms that are driving this
-          transformation. Real-world applications in intelligent city
-          transportation, elderly healthcare, and sparse mobile crowdsensing
-          will be presented, highlighting how intelligent edge sensing and
-          distributed cognition enable more responsive, efficient, and
-          human-centric systems. Finally, future directions toward
-          energy-efficient cognitive ecosystems and ethical considerations in
-          distributed intelligence will also be discussed.
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-3 mb-3 mb-sm-0 d-flex flex-row gap-4">
-        <div class="text-center">
-          <img
-            src="/assets/images/Dr_Runhe_Huang.png"
-            alt="Dr. Runhe Huang"
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Runhe Huang</h5>
-          <h6><i>Hosei University, Japan</i></h6>
-        </div>
-      </div>
-      <div class="col-9">
-        <h4>Biography</h4>
-        <p>
-          Runhe Huang received her B.Sc. in Electronics Technology from the
-          National University of Defense Technology, China, in 1982, and her
-          Ph.D. in Computer Science and Mathematics from the University of the
-          West of England, UK, in 1993. She is a full professor in the Faculty
-          of Computer and Information Sciences at Hosei University, Japan, where
-          she has held the position since 2003. She served as the head of the
-          Department of Computer Science from 2008 to 2010 and currently holds
-          the position of Deputy Director at Hosei University Library. She is a
-          senior member of IEEE and ACM, and served as the IEEE CIS SWTC chair
-          and vice chair from 2019 to 2022. Her research fields include
-          Artificial Intelligence, Ubiquitous Intelligence Computing, Machine
-          Intelligence, Cognitive Computing, and Knowledge Modeling. She has
-          authored more than 200 academic papers.
         </p>
       </div>
     </div>
