Work on improving UI

--- a/venue/calgary/index.html
+++ b/venue/calgary/index.html
@@ -19,7 +19,7 @@ title: Venue - Calgary
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">Calgary</h1>
+      <h1 class="display-3 fw-bolder mt-5">Calgary, Alberta, Canada</h1>
       <h3 class="w-75 responsive-width fw-medium text-center">
         The Blue Sky City
       </h3>
@@ -166,7 +166,7 @@ title: Venue - Calgary
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-row gap-2">
         <a href="/travel/banff-group-trip/" class="btn btn-primary w-auto"
-          >Join the Group Trip to Banff</a
+          >Join a Group Trip to Banff</a
         >
         <a
           href="https://www.banfflakelouise.com/"
