--- a/index.html
+++ b/index.html
@@ -121,222 +121,213 @@ title: Home
   </div>
 </section>
 
-<section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
->
-  <div class="row text-center">
-    <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
-  </div>
-
-  <div class="row text-center justify-content-center g-4">
-    <div class="col-md-4">
-      <img
-        src="/assets/images/HenryLeung.jpg"
-        alt="Dr. Henry Leung"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Henry Leung</h5>
-      <h6><i>The University of Calgary, Canada</i></h6>
-      <p>Co General Chair</p>
+<section class="container-fluid d-flex flex-column gap-4 bg-light">
+  <div
+    class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4 bg-light"
+  >
+    <div class="row text-center">
+      <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
     </div>
-    <div class="col-md-4">
-      <img
-        src="/assets/images/Oscar_Lin.jpg"
-        alt="Dr. Oscar Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Oscar Lin</h5>
-      <h6><i>Athabasca University, Canada</i></h6>
-      <p>Co-General Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/nan.jpg"
-        alt="Dr. Nan Xie"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Nan Xie</h5>
-      <h6><i>The City of Calgary, Canada</i></h6>
-      <p>Executive General Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/Reza_Malekian.jpg"
-        alt="Dr. Oscar Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Reza Malekian</h5>
-      <h6><i>Malmö University, Sweden</i></h6>
-      <p>Program Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/man.jpeg"
-        alt="Dr. Man Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Man Lin</h5>
-      <h6><i>St. Francis Xavier University, Canada</i></h6>
-      <p>Panel Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/steve-drew-small.jpg"
-        alt="Dr. Steve Drew"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Steve Drew</h5>
-      <h6><i>The University of Calgary, Canada</i></h6>
-      <p>Co-Financial Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/hongxin.JPG"
-        alt="Dr. Steve Drew"
-        class="circle-img mb-3"
-      />
-      <h5>Hongxin Yan</h5>
-      <h6><i>Athabasca University, Canada</i></h6>
-      <p>Co-Financial Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/Xueqin Liang.JPG"
-        alt="Dr. Oscar Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Xueqin Liang</h5>
-      <h6><i>Xidian University, China</i></h6>
-      <p>Publication Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/carson.png"
-        alt="Dr. Carson Leung"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Carson Leung</h5>
-      <h6><i>University of Manitoba, Canada</i></h6>
-      <p>Publication Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/x-feng.jpg"
-        alt="Dr. Carson Leung"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Xiaohua Feng</h5>
-      <h6><i>University of Bedfordshire, UK</i></h6>
-      <p>Diversity and Inclusion Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img src="/assets/images/saher.jpg" alt="Dr. " class="circle-img mb-3" />
-      <h5>Dr. Saher Javaid</h5>
-      <h6><i>The University of Calgary, Canada</i></h6>
-      <p>Women in Engineering Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/ye.jpg"
-        alt="Dr. John Ye"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Qiang Ye</h5>
-      <h6><i>The University of Calgary, Canada</i></h6>
-      <p>Special Session Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/aris.jpg"
-        alt="Dr. Aris"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Aris Leivadeas</h5>
-      <h6><i>TÉcole de technologie supérieure, Canada</i></h6>
-      <p>Publicity Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/ross.jpg"
-        alt="Dr. Rossitza"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Rossitza S. Marinova</h5>
-      <h6><i>Concordia University of Edmonton, Canada</i></h6>
-      <p>Local Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/ashiq.jpg"
-        alt="Dr. Aris"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. C. Ashiq Rahman</h5>
-      <h6><i>City of Calgary, Canada</i></h6>
-      <p>Industry Liaison Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/hong.jpg"
-        alt="DR Hong Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr Hong Lin</h5>
-      <h6><i>University of Houston-downtwon , USA</i></h6>
-      <p>Tutorial Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/raymond.png"
-        alt="Raymond Morland"
-        class="circle-img mb-3"
-      />
-      <h5>Raymond Morland</h5>
-      <h6><i>Athabasca University, Canada</i></h6>
-      <p>Web Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img src="/assets/images/abbas.jpg" alt="abbas" class="circle-img mb-3" />
-      <h5>Dr Abbas Mahbod</h5>
-      <h6><i>University of Calgary, Canada</i></h6>
-      <p>Local Chair</p>
-    </div>
-
-    <div class="col-md-4">
-      <img
-        src="/assets/images/guojun.jpg"
-        alt="abbas"
-        class="circle-img mb-3"
-      />
-      <h5>Guojun Tang</h5>
-      <h6><i>University of Calgary, Canada</i></h6>
-      <p>Local Chair</p>
-    </div>
-
     <div class="row text-center justify-content-center g-4">
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/HenryLeung.jpg"
+          alt="Dr. Henry Leung"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Henry Leung</h5>
+        <h6><i>The University of Calgary, Canada</i></h6>
+        <p>Co General Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/Oscar_Lin.jpg"
+          alt="Dr. Oscar Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Oscar Lin</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Co-General Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/nan.jpg"
+          alt="Dr. Nan Xie"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Nan Xie</h5>
+        <h6><i>The City of Calgary, Canada</i></h6>
+        <p>Executive General Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/Reza_Malekian.jpg"
+          alt="Dr. Oscar Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Reza Malekian</h5>
+        <h6><i>Malmö University, Sweden</i></h6>
+        <p>Program Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/man.jpeg"
+          alt="Dr. Man Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Man Lin</h5>
+        <h6><i>St. Francis Xavier University, Canada</i></h6>
+        <p>Panel Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/steve-drew-small.jpg"
+          alt="Dr. Steve Drew"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Steve Drew</h5>
+        <h6><i>The University of Calgary, Canada</i></h6>
+        <p>Co-Financial Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/hongxin.JPG"
+          alt="Dr. Steve Drew"
+          class="circle-img mb-3"
+        />
+        <h5>Hongxin Yan</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Co-Financial Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/Xueqin Liang.JPG"
+          alt="Dr. Oscar Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Xueqin Liang</h5>
+        <h6><i>Xidian University, China</i></h6>
+        <p>Publication Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/carson.png"
+          alt="Dr. Carson Leung"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Carson Leung</h5>
+        <h6><i>University of Manitoba, Canada</i></h6>
+        <p>Publication Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/x-feng.jpg"
+          alt="Dr. Carson Leung"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Xiaohua Feng</h5>
+        <h6><i>University of Bedfordshire, UK</i></h6>
+        <p>Diversity and Inclusion Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/saher.jpg"
+          alt="Dr. "
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Saher Javaid</h5>
+        <h6><i>The University of Calgary, Canada</i></h6>
+        <p>Women in Engineering Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/ye.jpg"
+          alt="Dr. John Ye"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Qiang Ye</h5>
+        <h6><i>The University of Calgary, Canada</i></h6>
+        <p>Special Session Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/aris.jpg"
+          alt="Dr. Aris"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Aris Leivadeas</h5>
+        <h6><i>TÉcole de technologie supérieure, Canada</i></h6>
+        <p>Publicity Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/ross.jpg"
+          alt="Dr. Rossitza"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Rossitza S. Marinova</h5>
+        <h6><i>Concordia University of Edmonton, Canada</i></h6>
+        <p>Local Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/ashiq.jpg"
+          alt="Dr. Aris"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. C. Ashiq Rahman</h5>
+        <h6><i>City of Calgary, Canada</i></h6>
+        <p>Industry Liaison Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/hong.jpg"
+          alt="DR Hong Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr Hong Lin</h5>
+        <h6><i>University of Houston-downtwon , USA</i></h6>
+        <p>Tutorial Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/raymond.png"
+          alt="Raymond Morland"
+          class="circle-img mb-3"
+        />
+        <h5>Raymond Morland</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Web Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/abbas.jpg"
+          alt="abbas"
+          class="circle-img mb-3"
+        />
+        <h5>Dr Abbas Mahbod</h5>
+        <h6><i>University of Calgary, Canada</i></h6>
+        <p>Local Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/guojun.jpg"
+          alt="abbas"
+          class="circle-img mb-3"
+        />
+        <h5>Guojun Tang</h5>
+        <h6><i>University of Calgary, Canada</i></h6>
+        <p>Local Chair</p>
+      </div>
+    </div>
+    <div class="row text-center justify-content-center g-4 mt-4">
       <div class="row text-center">
         <div class="col-12">
           <h2 class="fs-2 mb-2">Steering Committee Chairs</h2>
         </div>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/metaverse/ma.jpg"
           alt="Dr. Ma"
@@ -347,7 +338,7 @@ title: Home
         <p>Steering Committee Chair</p>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/metaverse/laurence.jpeg"
           alt="Dr. Yang"
@@ -361,14 +352,86 @@ title: Home
   </div>
 </section>
 
+<section class="container-fluid d-flex flex-column gap-4">
+  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+    <h2 class="fs-2 text-center">
+      Attend Keynote Presentations by World-Renowned Researchers
+    </h2>
+    <div class="row pb-3">
+      <div class="col-md-6 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle text-center h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              From Digital Twins to Generative Digital Twins: Towards a Novel
+              Approach in the IoT Edge-Cloud Continuum
+            </h4>
+            <p>
+              Explore the emerging concept of Generative Digital Twins (GDTs),
+              highlighting how Generative AI enhances their predictive,
+              adaptive, and explanatory capabilities for smart city and IoT
+              applications.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/metaverse/g.jpg"
+                alt="Dr. Giancarlo Fortino"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Giancarlo Fortino</h5>
+              <h6><i>The University of Calabria, Italy</i></h6>
+            </div>
+
+            <a href="keynotes/giancarlo-fortino/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 mb-3 mb-sm-0">
+        <div class="card bg-light-subtle h-100">
+          <div
+            class="card-body d-flex flex-column justify-content-between align-items-center gap-2"
+          >
+            <h4 class="fs-4 text-center">
+              Intelligent Edge Sensing and Distributed Cognition Are
+              Transforming the Future of Smart World
+            </h4>
+            <p>
+              Examine how intelligent edge sensing and distributed cognition are
+              enabling real-time, privacy-aware, and resilient smart systems
+              across domains like transportation, healthcare, and mobile
+              crowdsensing.
+            </p>
+            <div class="text-center">
+              <img
+                src="/assets/images/Dr_Runhe_Huang.png"
+                alt="Dr. Runhe Huang"
+                class="circle-img mb-3"
+              />
+              <h5>Presented by Dr. Runhe Huang</h5>
+              <h6><i>Hosei University, Japan</i></h6>
+            </div>
+
+            <a href="keynotes/runhe-huang/" class="btn btn-primary w-100"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4 text-center">
         <h2 class="fs-2 text-center">Topics Covered</h2>
         <div class="row">
-          <div class="col-sm-6">
-            <ul class="row list-unstyled">
+          <div class="col-md-6">
+            <ul class="row list-unstyled mb-0">
               <li class="fs-5">Smart Industry and Manufacture</li>
               <li class="fs-5">Smart Home and Furniture</li>
               <li class="fs-5">Smart Agriculture and Aquaculture</li>
@@ -383,8 +446,8 @@ title: Home
               <li class="fs-5">Smart Foods and Living</li>
             </ul>
           </div>
-          <div class="col-sm-6">
-            <ul class="row list-unstyled">
+          <div class="col-md-6">
+            <ul class="row list-unstyled mb-0">
               <li class="fs-5">Smart Logistics and Retail</li>
               <li class="fs-5">Smart Learning and Education</li>
               <li class="fs-5">Smart Building and Structure</li>
@@ -410,8 +473,8 @@ title: Home
     <h2 class="fs-2 text-center">Previous IEEE Smart World Congress</h2>
     <div class="row pb-3">
       <div class="col-sm-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle">
-          <div class="card-body">
+        <div class="card bg-light-subtle h-100">
+          <div class="card-body d-flex flex-column justify-content-between">
             <h5 class="fs-6 text-center">2022 IEEE SWC</h5>
             <h3 class="text-center">Haikou</h3>
             <p class="card-text text-center">December 15 - 18, 2022</p>
@@ -424,8 +487,8 @@ title: Home
         </div>
       </div>
       <div class="col-sm-4 mb-3 mb-sm-0">
-        <div class="card bg-light-subtle">
-          <div class="card-body">
+        <div class="card bg-light-subtle h-100">
+          <div class="card-body d-flex flex-column justify-content-between">
             <h5 class="fs-6 text-center">2023 IEEE SWC</h5>
             <h3 class="text-center">Portsmouth</h3>
             <p class="card-text text-center">August 28 - 31, 2023</p>
@@ -438,7 +501,7 @@ title: Home
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="card bg-light-subtle">
+        <div class="card bg-light-subtle h-100">
           <div
             class="card-body d-flex flex-column justify-content-between align-content-center"
           >
@@ -525,7 +588,7 @@ title: Home
             >Learn More</a
           >
           <a href="/travel/banff-group-trip/" class="btn btn-primary"
-            >Join the Group Trip to Banff</a
+            >Join a Group Trip to Banff</a
           >
         </div>
       </div>
