Fix links on home page

--- a/index.html
+++ b/index.html
@@ -584,9 +584,7 @@ title: Home
           nearby Banff and Jasper national parks.
         </p>
         <div class="d-flex flex-sm-row gap-2 flex-column">
-          <a href="/venue/telus-convention-center" class="btn btn-primary"
-            >Learn More</a
-          >
+          <a href="/venue/calgary" class="btn btn-primary">Learn More</a>
           <a href="/travel/banff-group-trip/" class="btn btn-primary"
             >Join a Group Trip to Banff</a
           >
